--- a/index.html
+++ b/index.html
@@ -74,14 +74,16 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^18.3.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.1/",
+    "react/": "https://aistudiocdn.com/react@^18.3.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
+    "uuid": "https://aistudiocdn.com/uuid@^10.0.0",
     "recharts": "https://aistudiocdn.com/recharts@^2.12.7",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.378.0",
-    "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.3.3"
+    "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.3.3",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
