--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.4.1",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.0"
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "nodemailer": "https://aistudiocdn.com/nodemailer@^7.0.11",
+    "express": "https://aistudiocdn.com/express@^5.1.0"
   }
 }
 </script>
