feat: Enhance lead filtering and error handling
Introduces more robust lead filtering to exclude personal email domains, improving lead quality. Adds an ErrorBoundary component to improve application stability by catching rendering errors. Updates the `package.json` to specify a minimum Node.js version and includes new dependencies for potential future features. Also refactors the Gemini service to expose `withHybridEngine` for broader use.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "nodemailer": "https://aistudiocdn.com/nodemailer@^7.0.11",
-    "express": "https://aistudiocdn.com/express@^5.1.0"
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
   }
 }
 </script>
