feat: Add rate limiting, SQLite support, and improve Gemini prompts
Introduces several key enhancements:

- **Rate Limiting:** Implements `express-rate-limit` to protect the application from excessive requests.
- **Database Integration:** Adds SQLite dependencies (`sqlite3`, `sqlite`) for local data storage, facilitating persistence.
- **Gemini Prompt Optimization:** Refines the `findDecisionMaker` prompt to more aggressively search for and guess email addresses, improving lead enrichment.

These changes enhance the robustness, data management, and effectiveness of lead generation and outreach.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "nodemailer": "https://aistudiocdn.com/nodemailer@^7.0.11",
     "express": "https://aistudiocdn.com/express@^5.1.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "express-rate-limit": "https://aistudiocdn.com/express-rate-limit@^8.2.1",
+    "sqlite3": "https://aistudiocdn.com/sqlite3@^5.1.7",
+    "sqlite": "https://aistudiocdn.com/sqlite@^5.1.1"
   }
 }
 </script>
